SONARIAC-1327 Implement Verifier to evaluate Helm files in unit test